--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -7,7 +7,7 @@ body {
 	/*Upload a new one to the img folder.*/
 	/*Make sure you name it 'minecraft.jpg'*/
 	background: linear-gradient(rgba(20, 26, 35,0.55),rgba(20, 26, 35, 0.55)),
-				url("../img/minecraft.jpg") no-repeat center center fixed;
+				url("../img/minecraft.mp4") no-repeat center center fixed;
 	background-size: cover;
 	font-family: "Open Sans", Helvetica;
 	margin: 0;
@@ -224,4 +224,5 @@ p {
 	.item:not(:first-child) {
 		margin-left: 90px;
 	}
+
 }
